Making vertex parent hides faces #32139

Closed
opened 2012-07-18 18:34:15 +02:00 by Henrik Aarnio · 4 comments

%%%Blender 2.63a, as well as tested on r48962 from builder.blender.org and r49034 by Olson, built from svn.
Linux 64 bit

To reproduce hit ctrl-p in attached file.
Faces become hidden, hitting alt-h or tabbing out of edit mode restores them.
Hiding vertices after faces are hidden this way turns mesh visible, but completely black.%%%

%%%Blender 2.63a, as well as tested on r48962 from builder.blender.org and r49034 by Olson, built from svn. Linux 64 bit To reproduce hit ctrl-p in attached file. Faces become hidden, hitting alt-h or tabbing out of edit mode restores them. Hiding vertices after faces are hidden this way turns mesh visible, but completely black.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Likely this is load/make edit mesh tricks which makes this happen. That tricks were added by self to solve some other issues, would look into this issue.%%%

%%%Likely this is load/make edit mesh tricks which makes this happen. That tricks were added by self to solve some other issues, would look into this issue.%%%

%%%Fixed in svn rev49233. Thanks for the report, closing.%%%

%%%Fixed in svn rev49233. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#32139
No description provided.